test/classes/errors/nilability-assign/assign-oknil-owned-from-oknil-nil.chpl
//  lhs: owned?  rhs: nil?  ok

class MyClass {  var x: int;  }

var lhs: owned MyClass? = nil;


lhs = nil;


